test/corpus/case.txt
=============|||
Basic CASE
=============|||

---- MODULE Test ----
op ==
    CASE 1 -> 2
    [] 3 -> 4
    [] OTHER -> 5
====

--------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm (number) (case_arrow) (number))
      (case_box) (case_arm (number) (case_arrow) (number))
      (case_box) (other_arm (case_arrow) (number))
    )
  ))
(double_line)))

=============|||
Conjlist with CASE
=============|||

---- MODULE Test ----
op ==
  /\  CASE 1 -> 2
      [] 3 -> 2
      [] OTHER -> 5
  /\ 6
====

-------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (conj_list
      (conj_item
        (bullet_conj)
        (case
          (case_arm (number) (case_arrow) (number))
          (case_box) (case_arm (number) (case_arrow) (number))
          (case_box) (other_arm (case_arrow) (number))
        )
      )
      (conj_item (bullet_conj) (number))
    )
  ))
(double_line)))

=============|||
Conjlist inside CASE
=============|||

---- MODULE Test ----
op ==
  CASE
    /\ 1
    /\ 2
      ->
        /\ 3
        /\ 4
  []
    /\ 5
    /\ 6
      ->
        /\ 7
        /\ 8
  [] OTHER ->
    /\ 7
    /\ 8
====

-------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm
        (conj_list (conj_item (bullet_conj) (number)) (conj_item (bullet_conj) (number)))
        (case_arrow)
        (conj_list (conj_item (bullet_conj) (number)) (conj_item (bullet_conj) (number)))
      )
      (case_box)
      (case_arm
        (conj_list (conj_item (bullet_conj) (number)) (conj_item (bullet_conj) (number)))
        (case_arrow)
        (conj_list (conj_item (bullet_conj) (number)) (conj_item (bullet_conj) (number)))
      )
      (case_box)
      (other_arm (case_arrow)
        (conj_list (conj_item (bullet_conj) (number)) (conj_item (bullet_conj) (number)))
      )
    )
  ))
(double_line)))

=============|||
Disjlist with CASE
=============|||

---- MODULE Test ----
op ==
  \/  CASE 1 -> 2
      [] 3 -> 2
      [] OTHER -> 5
  \/ 6
====

-------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (disj_list
      (disj_item
        (bullet_disj)
        (case
          (case_arm (number) (case_arrow) (number))
          (case_box) (case_arm (number) (case_arrow) (number))
          (case_box) (other_arm (case_arrow) (number))
        )
      )
      (disj_item (bullet_disj) (number))
    )
  ))
(double_line)))

=============|||
Disjlist inside CASE
=============|||

---- MODULE Test ----
op ==
  CASE
    \/ 1
    \/ 2
      ->
        \/ 3
        \/ 4
  []
    \/ 5
    \/ 6
      ->
        \/ 7
        \/ 8
  [] OTHER ->
    \/ 7
    \/ 8
====

-------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm
        (disj_list (disj_item (bullet_disj) (number)) (disj_item (bullet_disj) (number)))
        (case_arrow)
        (disj_list (disj_item (bullet_disj) (number)) (disj_item (bullet_disj) (number)))
      )
      (case_box)
      (case_arm
        (disj_list (disj_item (bullet_disj) (number)) (disj_item (bullet_disj) (number)))
        (case_arrow)
        (disj_list (disj_item (bullet_disj) (number)) (disj_item (bullet_disj) (number)))
      )
      (case_box)
      (other_arm (case_arrow)
        (disj_list (disj_item (bullet_disj) (number)) (disj_item (bullet_disj) (number)))
      )
    )
  ))
(double_line)))

===================|||
CASE SANY GitHub Issue
===================|||

https://github.com/tlaplus/tlaplus/issues/487
---- MODULE Test ----
op ==
  CASE A ->
    /\ CASE B -> C
       [] D -> E
  [] F -> G

op2 ==
  CASE H ->
    /\ CASE I -> J
       [] OTHER -> K
  [] L -> M

op3 ==
  CASE N ->
    /\ CASE O -> P
       [] Q -> R
    /\ S
  [] T -> U
====

-------------------|||

(source_file (extramodular_text) (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm (identifier_ref) (case_arrow) (conj_list (conj_item (bullet_conj)
        (case
          (case_arm (identifier_ref) (case_arrow) (identifier_ref))
          (case_box)
          (case_arm (identifier_ref) (case_arrow) (identifier_ref))
        )
      )))
      (case_box)
      (case_arm (identifier_ref) (case_arrow) (identifier_ref))
    )
  ))
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm (identifier_ref) (case_arrow) (conj_list (conj_item (bullet_conj)
        (case
          (case_arm (identifier_ref) (case_arrow) (identifier_ref))
          (case_box)
          (other_arm (case_arrow) (identifier_ref))
        )
      )))
      (case_box)
      (case_arm (identifier_ref) (case_arrow) (identifier_ref))
    )
  ))
  (unit (operator_definition
    (identifier) (def_eq)
    (case
      (case_arm (identifier_ref) (case_arrow) (conj_list
        (conj_item (bullet_conj)
          (case
            (case_arm (identifier_ref) (case_arrow) (identifier_ref))
            (case_box)
            (case_arm (identifier_ref) (case_arrow) (identifier_ref))
          )
        )
        (conj_item (bullet_conj) (identifier_ref))
      ))
      (case_box)
      (case_arm (identifier_ref) (case_arrow) (identifier_ref))
    )
  ))
(double_line)))
